Introduce one frame related configs

--- a/forex-mtl/src/main/resources/application.conf
+++ b/forex-mtl/src/main/resources/application.conf
@@ -4,5 +4,14 @@ app {
     port = 8080
     timeout = 40 seconds
   }
+
+  one-frame {
+    base-url = "http://localhost:8081"
+    authentication-token = "10dc303535874aeccc86a8251e6992f5"
+  }
+
+  rates-cache {
+    rate-ttl = 5 minutes
+  }
 }
 
