Adapt http layer to the rates process

--- a/forex-mtl/src/main/resources/application.conf
+++ b/forex-mtl/src/main/resources/application.conf
@@ -11,7 +11,9 @@ app {
   }
 
   rates-cache {
-    rate-ttl = 5 minutes
+    # 260 seconds => 5 minutes - 40 seconds of request timeout,
+    #  to try to satisfy API consumer expectation, of at most 5 minutes old rate
+    rate-ttl = 260 seconds
   }
 }
 
